fix alignment in mobile@firefox

--- a/src/app/components/questions/questions.component.scss
+++ b/src/app/components/questions/questions.component.scss
@@ -15,9 +15,9 @@ main {
     grid-template-rows: 1fr;
 
     .submit-wrapper {
-        align-self: end;
-        justify-self: center;
+        display: grid;
         justify-items: center;
+        align-self: end;
 
 
         button {
